--- a/OneDrive/Documentos/NetBeansProjectsP/TelasCompany/src/View/AddItem.fxml
+++ b/OneDrive/Documentos/NetBeansProjectsP/TelasCompany/src/View/AddItem.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
@@ -28,21 +29,25 @@
             </Label>
             <HBox maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="45.0" prefWidth="1396.0" style="-fx-alignment: start;" VBox.vgrow="SOMETIMES">
                <children>
-                  <Label styleClass="labels" stylesheets="@../css/styles.css" text="Seleccione el tipo de producto">
+                  <Label stylesheets="@../css/styles.css" text="Seleccione el tipo de Item">
                      <font>
                         <Font name="Roboto Black" size="20.0" />
                      </font>
                      <HBox.margin>
                         <Insets right="20.0" />
                      </HBox.margin>
+                     <styleClass>
+                        <String fx:value="labels" />
+                        <String fx:value="labelsBlack" />
+                     </styleClass>
                   </Label>
-                  <ComboBox fx:id="ComboItems" prefHeight="30.0" prefWidth="250.0" promptText="Seleccione un tipo de producto" style="-fx-font-size: 10pt;" />
+                  <ComboBox fx:id="ComboItems" prefHeight="43.0" prefWidth="374.0" promptText="Seleccione un tipo de Item" style="-fx-font-size: 15pt;" />
                   <Label text="*" textFill="#c20c0c">
                      <font>
                         <Font name="Roboto Black" size="18.0" />
                      </font>
                   </Label>
-                  <Label styleClass="labels" stylesheets="@../css/styles.css" text="Fecha de entrega">
+                  <Label styleClass="labelsBlack" stylesheets="@../css/styles.css" text="Fecha de entrega">
                      <font>
                         <Font name="Roboto Medium" size="18.0" />
                      </font>
@@ -50,7 +55,7 @@
                         <Insets left="100.0" right="20.0" />
                      </HBox.margin>
                   </Label>
-                  <DatePicker fx:id="DateDelivery" disable="true" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="26.0" prefWidth="175.0">
+                  <DatePicker fx:id="DateDelivery" disable="true" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="35.0" prefWidth="210.0" style="-fx-font-size: 12pt;">
                      <HBox.margin>
                         <Insets right="15.0" />
                      </HBox.margin>
@@ -67,7 +72,7 @@
             </HBox>
             <VBox prefHeight="360.0" prefWidth="1396.0" style="-fx-alignment: start;" VBox.vgrow="SOMETIMES">
                <children>
-                  <Label styleClass="labels" stylesheets="@../css/styles.css" text="Detalle del Producto">
+                  <Label styleClass="labelsBlack" stylesheets="@../css/styles.css" text="Detalle del Item">
                      <font>
                         <Font name="Roboto Medium" size="20.0" />
                      </font>
@@ -97,12 +102,14 @@
                         <Insets bottom="10.0" top="20.0" />
                      </VBox.margin>
                   </HBox>
+
                   <HBox fx:id="HBoxMeasurement2" prefHeight="72.0" prefWidth="1396.0" style="-fx-alignment: start;" VBox.vgrow="SOMETIMES">
+
                      <VBox.margin>
                         <Insets top="10.0" />
                      </VBox.margin>
                   </HBox>
-                  <Label styleClass="labels" stylesheets="@../css/styles.css" text="Detalles Adicionales">
+                  <Label styleClass="labelsBlack" stylesheets="@../css/styles.css" text="Detalles Adicionales">
                      <font>
                         <Font name="Roboto Medium" size="19.0" />
                      </font>
@@ -120,7 +127,7 @@
                   </TextArea>
                   <HBox prefHeight="78.0" prefWidth="1396.0" style="-fx-alignment: start;" VBox.vgrow="SOMETIMES">
                      <children>
-                        <Label styleClass="labels" stylesheets="@../css/styles.css" text="Precio Total">
+                        <Label styleClass="labelsBlack" stylesheets="@../css/styles.css" text="Precio Total">
                            <font>
                               <Font name="Roboto Medium" size="18.0" />
                            </font>
@@ -128,7 +135,7 @@
                               <Insets left="50.0" right="20.0" top="20.0" />
                            </HBox.margin>
                         </Label>
-                        <TextField fx:id="TxtFTotalCost" disable="true" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="26.0">
+                        <TextField fx:id="TxtFTotalCost" disable="true" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="35.0" prefWidth="190.0">
                            <HBox.margin>
                               <Insets right="15.0" top="20.0" />
                            </HBox.margin>
@@ -144,7 +151,7 @@
                               <Insets top="20.0" />
                            </HBox.margin>
                         </Label>
-                        <Label styleClass="labels" stylesheets="@../css/styles.css" text="Abono">
+                        <Label styleClass="labelsBlack" stylesheets="@../css/styles.css" text="Abono">
                            <font>
                               <Font name="Roboto Medium" size="18.0" />
                            </font>
@@ -152,7 +159,7 @@
                               <Insets left="35.0" right="20.0" top="20.0" />
                            </HBox.margin>
                         </Label>
-                        <TextField fx:id="TxtFPayment" disable="true" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="26.0">
+                        <TextField fx:id="TxtFPayment" disable="true" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="35.0" prefWidth="190.0">
                            <HBox.margin>
                               <Insets right="15.0" top="20.0" />
                            </HBox.margin>
@@ -175,12 +182,12 @@
                   </HBox>
                   <HBox prefHeight="100.0" prefWidth="200.0" style="-fx-alignment: center;">
                      <children>
-                        <Button fx:id="BtnAddItem" alignment="TOP_RIGHT" contentDisplay="RIGHT" disable="true" mnemonicParsing="false" onMouseClicked="#onAddHandiworkDetail" styleClass="roundButton" stylesheets="@../css/styles.css" text="Ingresar Item">
+                        <Button fx:id="BtnAddItem" alignment="TOP_RIGHT" contentDisplay="RIGHT" disable="true" mnemonicParsing="false" onMouseClicked="#onAddHandiworkDetail" styleClass="saveButton" stylesheets="@../css/styles.css" text="Ingresar Item">
                            <font>
                               <Font name="Roboto Medium" size="16.0" />
                            </font>
                            <graphic>
-                              <ImageView>
+                              <ImageView preserveRatio="true">
                                  <image>
                                     <Image url="@Images/save_icon.png" />
                                  </image>
@@ -190,7 +197,7 @@
                               <Insets right="300.0" />
                            </HBox.margin>
                         </Button>
-                        <Button fx:id="BtnCancel" contentDisplay="RIGHT" mnemonicParsing="false" onMouseClicked="#closeDialog" prefHeight="71.0" prefWidth="174.0" styleClass="roundButton" stylesheets="@../css/styles.css" text="Cancelar">
+                        <Button fx:id="BtnCancel" contentDisplay="RIGHT" mnemonicParsing="false" onMouseClicked="#closeDialog" prefHeight="82.0" prefWidth="235.0" styleClass="cancelButton" stylesheets="@../css/styles.css" text="Cancelar">
                            <font>
                               <Font name="Roboto Medium" size="16.0" />
                            </font>
