--- a/OneDrive/Documentos/NetBeansProjectsP/TelasCompany/src/View/AddMeasurement.fxml
+++ b/OneDrive/Documentos/NetBeansProjectsP/TelasCompany/src/View/AddMeasurement.fxml
@@ -11,9 +11,9 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="522.0" prefWidth="1148.0" style="-fx-alignment: center;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller_Pages.AddMeasurementController">
+<VBox minWidth="-Infinity" prefHeight="421.0" prefWidth="1071.0" style="-fx-alignment: start; -fx-background-color: white;" stylesheets="@../css/styles.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller_Pages.AddMeasurementController">
    <children>
-      <VBox prefHeight="70.0" prefWidth="674.0" style="-fx-alignment: center;">
+      <VBox prefHeight="75.0" prefWidth="814.0" style="-fx-alignment: center;" VBox.vgrow="NEVER">
          <children>
             <Label text="Añadir Medidas">
                <font>
@@ -27,96 +27,97 @@
             </Label>
          </children>
       </VBox>
-      <HBox prefHeight="100.0" prefWidth="200.0" style="-fx-alignment: start;">
+      <VBox prefHeight="200.0" prefWidth="100.0" style="-fx-alignment: center;" VBox.vgrow="SOMETIMES">
          <children>
-            <Label styleClass="labels" stylesheets="@../css/styles.css" text="Nombre de la Medida">
-               <font>
-                  <Font name="Roboto Medium" size="22.0" />
-               </font>
-               <HBox.margin>
-                  <Insets left="20.0" top="20.0" />
-               </HBox.margin>
-            </Label>
-            <TextField fx:id="TxtName" prefColumnCount="10">
-               <font>
-                  <Font name="Roboto" size="17.0" />
-               </font>
-               <HBox.margin>
-                  <Insets left="20.0" top="20.0" />
-               </HBox.margin>
-            </TextField>
-            <Label text="*" textFill="#e10808">
-               <font>
-                  <Font name="Roboto Black" size="14.0" />
-               </font>
-               <HBox.margin>
+            <HBox prefHeight="100.0" prefWidth="200.0" style="-fx-alignment: center-left;" VBox.vgrow="SOMETIMES">
+               <children>
+                  <Label text="Nombre de la Medida">
+                     <font>
+                        <Font name="Roboto Medium" size="22.0" />
+                     </font>
+                     <HBox.margin>
+                        <Insets left="150.0" top="20.0" />
+                     </HBox.margin>
+                  </Label>
+                  <TextField fx:id="TxtName" prefColumnCount="10">
+                     <font>
+                        <Font name="Roboto" size="17.0" />
+                     </font>
+                     <HBox.margin>
+                        <Insets left="20.0" top="20.0" />
+                     </HBox.margin>
+                  </TextField>
+                  <Label text="*" textFill="#e10808">
+                     <font>
+                        <Font name="Roboto Black" size="14.0" />
+                     </font>
+                     <HBox.margin>
+                        <Insets top="20.0" />
+                     </HBox.margin>
+                  </Label>
+               </children>
+               <VBox.margin>
                   <Insets top="20.0" />
-               </HBox.margin>
-            </Label>
+               </VBox.margin>
+            </HBox>
+            <HBox prefHeight="100.0" prefWidth="200.0" style="-fx-alignment: center-left;" VBox.vgrow="SOMETIMES">
+               <children>
+                  <Label text="Escoja el item que será añadido la nueva medida">
+                     <font>
+                        <Font name="Roboto Medium" size="22.0" />
+                     </font>
+                     <HBox.margin>
+                        <Insets left="150.0" />
+                     </HBox.margin>
+                  </Label>
+                  <ComboBox fx:id="ComboItems" prefHeight="26.0" prefWidth="184.0" style="-fx-font-size: 15pt;">
+                     <HBox.margin>
+                        <Insets left="20.0" />
+                     </HBox.margin>
+                  </ComboBox>
+               </children>
+               <VBox.margin>
+                  <Insets top="20.0" />
+               </VBox.margin>
+            </HBox>
+            <HBox prefHeight="100.0" prefWidth="200.0" style="-fx-alignment: center-left;" VBox.vgrow="SOMETIMES">
+               <children>
+                  <Button contentDisplay="RIGHT" mnemonicParsing="false" onMouseClicked="#AddMeasurement" styleClass="saveButton" stylesheets="@../css/styles.css" text="Ingresar">
+                     <font>
+                        <Font name="Roboto Medium" size="22.0" />
+                     </font>
+                     <HBox.margin>
+                        <Insets left="150.0" />
+                     </HBox.margin>
+                     <graphic>
+                        <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@Images/save_icon.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </Button>
+                  <Button fx:id="BtnCancel" contentDisplay="RIGHT" mnemonicParsing="false" onMouseClicked="#closeDialog" styleClass="cancelButton" stylesheets="@../css/styles.css" text="Cancelar">
+                     <font>
+                        <Font name="Roboto Medium" size="22.0" />
+                     </font>
+                     <HBox.margin>
+                        <Insets left="100.0" right="200.0" />
+                     </HBox.margin>
+                     <graphic>
+                        <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@Images/cancel_icon.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </Button>
+               </children>
+               <VBox.margin>
+                  <Insets bottom="20.0" top="20.0" />
+               </VBox.margin>
+            </HBox>
          </children>
-         <VBox.margin>
-            <Insets top="20.0" />
-         </VBox.margin>
-         <padding>
-            <Insets left="20.0" />
-         </padding>
-      </HBox>
-      <HBox prefHeight="100.0" prefWidth="200.0" style="-fx-alignment: start;">
-         <padding>
-            <Insets left="20.0" />
-         </padding>
-         <children>
-            <Label styleClass="labels" stylesheets="@../css/styles.css" text="Escoja el item que será añadido la nueva medida">
-               <font>
-                  <Font name="Roboto Medium" size="22.0" />
-               </font>
-               <HBox.margin>
-                  <Insets left="20.0" top="20.0" />
-               </HBox.margin>
-            </Label>
-            <ComboBox fx:id="ComboItems" prefHeight="26.0" prefWidth="184.0" style="-fx-font-size: 15pt;">
-               <HBox.margin>
-                  <Insets left="20.0" top="20.0" />
-               </HBox.margin>
-            </ComboBox>
-         </children>
-      </HBox>
-      <HBox prefHeight="100.0" prefWidth="200.0" style="-fx-alignment: start;">
-         <children>
-            <Button contentDisplay="RIGHT" mnemonicParsing="false" onMouseClicked="#AddMeasurement" styleClass="roundButton" stylesheets="@../css/styles.css" text="Ingresar">
-               <font>
-                  <Font name="Roboto Medium" size="22.0" />
-               </font>
-               <HBox.margin>
-                  <Insets left="20.0" />
-               </HBox.margin>
-               <graphic>
-                  <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@Images/save_icon.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-            </Button>
-            <Button fx:id="BtnCancel" contentDisplay="RIGHT" mnemonicParsing="false" onMouseClicked="#closeDialog" styleClass="roundButton" stylesheets="@../css/styles.css" text="Cancelar">
-               <font>
-                  <Font name="Roboto Medium" size="22.0" />
-               </font>
-               <HBox.margin>
-                  <Insets left="100.0" right="200.0" />
-               </HBox.margin>
-               <graphic>
-                  <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@Images/cancel_icon.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-            </Button>
-         </children>
-         <VBox.margin>
-            <Insets top="20.0" />
-         </VBox.margin>
-      </HBox>
+      </VBox>
    </children>
 </VBox>
