--- a/OneDrive/Documentos/NetBeansProjectsP/TelasCompany/src/View/ModifyEliminateItemAdded.fxml
+++ b/OneDrive/Documentos/NetBeansProjectsP/TelasCompany/src/View/ModifyEliminateItemAdded.fxml
@@ -28,15 +28,15 @@
             </Label>
             <HBox maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="45.0" prefWidth="1396.0" style="-fx-alignment: start;" VBox.vgrow="SOMETIMES">
                <children>
-                  <Label prefHeight="30.0" prefWidth="241.0" styleClass="labels" stylesheets="@../css/styles.css" text="Estado de la Obra">
+                  <Label minWidth="244.0" prefHeight="35.0" prefWidth="244.0" styleClass="labelsBlack" stylesheets="@../css/styles.css" text="Estado de la Obra">
                      <font>
                         <Font name="Roboto Black" size="20.0" />
                      </font>
                      <HBox.margin>
-                        <Insets left="50.0" right="50.0" />
+                        <Insets left="50.0" right="50.0" top="5.0" />
                      </HBox.margin>
                   </Label>
-                  <ComboBox fx:id="ComboStateItem" prefHeight="30.0" prefWidth="250.0" promptText="Pendiente o Finalizado" style="-fx-font-size: 10pt;" />
+                  <ComboBox fx:id="ComboStateItem" prefHeight="43.0" prefWidth="411.0" promptText="Pendiente o Finalizado" style="-fx-font-size: 15pt;" />
                   <Label text="*" textFill="#c20c0c">
                      <font>
                         <Font name="Roboto Black" size="18.0" />
@@ -63,11 +63,11 @@
                   <Insets bottom="5.0" top="10.0" />
                </VBox.margin>
             </HBox>
-            <VBox prefHeight="692.0" prefWidth="1542.0" style="-fx-alignment: start;" VBox.vgrow="SOMETIMES">
+            <VBox prefHeight="686.0" prefWidth="1472.0" style="-fx-alignment: start;" VBox.vgrow="SOMETIMES">
                <children>
                   <HBox prefHeight="100.0" prefWidth="200.0" style="-fx-alignment: start;">
                      <children>
-                        <Label fx:id="nameItem" styleClass="labels" stylesheets="@../css/styles.css">
+                        <Label fx:id="nameItem" styleClass="labelsBlack" stylesheets="@../css/styles.css">
                            <font>
                               <Font name="Roboto Black" size="20.0" />
                            </font>
@@ -77,7 +77,7 @@
                         </Label>
                      </children>
                   </HBox>
-                  <Label styleClass="labels" stylesheets="@../css/styles.css" text="Detalle del Producto">
+                  <Label styleClass="labelsBlack" stylesheets="@../css/styles.css" text="Detalle del Item">
                      <font>
                         <Font name="Roboto Medium" size="20.0" />
                      </font>
@@ -115,7 +115,7 @@
                         <Insets top="10.0" />
                      </VBox.margin>
                   </HBox>
-                  <Label styleClass="labels" stylesheets="@../css/styles.css" text="Detalles Adicionales">
+                  <Label styleClass="labelsBlack" stylesheets="@../css/styles.css" text="Detalles Adicionales">
                      <font>
                         <Font name="Roboto Medium" size="19.0" />
                      </font>
@@ -138,7 +138,7 @@
                         <Insets bottom="5.0" top="20.0" />
                      </VBox.margin>
                   </HBox>
-                  <Label styleClass="labels" stylesheets="@../css/styles.css" text="Fecha de entrega">
+                  <Label styleClass="labelsBlack" stylesheets="@../css/styles.css" text="Fecha de entrega">
                      <font>
                         <Font name="Roboto Medium" size="18.0" />
                      </font>
@@ -148,7 +148,7 @@
                   </Label>
                   <HBox prefHeight="100.0" prefWidth="200.0">
                      <children>
-                        <DatePicker fx:id="DateDelivery" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="26.0" prefWidth="175.0">
+                        <DatePicker fx:id="DateDelivery" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="35.0" prefWidth="210.0" style="-fx-font-size: 12pt;">
                            <HBox.margin>
                               <Insets left="50.0" />
                            </HBox.margin>
@@ -165,7 +165,7 @@
                   </HBox>
                   <HBox prefHeight="78.0" prefWidth="1396.0" style="-fx-alignment: start;" VBox.vgrow="SOMETIMES">
                      <children>
-                        <Label styleClass="labels" stylesheets="@../css/styles.css" text="Precio Total">
+                        <Label styleClass="labelsBlack" stylesheets="@../css/styles.css" text="Precio Total">
                            <font>
                               <Font name="Roboto Medium" size="18.0" />
                            </font>
@@ -173,7 +173,7 @@
                               <Insets left="50.0" right="20.0" />
                            </HBox.margin>
                         </Label>
-                        <TextField fx:id="TxtFTotalCost" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="26.0">
+                        <TextField fx:id="TxtFTotalCost" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="35.0" prefWidth="190.0">
                            <HBox.margin>
                               <Insets right="15.0" />
                            </HBox.margin>
@@ -189,7 +189,7 @@
                               <Insets right="20.0" />
                            </HBox.margin>
                         </Label>
-                        <Label fx:id="PaymentDone" styleClass="labels" stylesheets="@../css/styles.css" text="Abonado">
+                        <Label fx:id="PaymentDone" styleClass="labelsBlack" stylesheets="@../css/styles.css" text="Abonado">
                            <font>
                               <Font name="Roboto Medium" size="20.0" />
                            </font>
@@ -202,9 +202,9 @@
                         <Insets top="20.0" />
                      </VBox.margin>
                   </HBox>
-                  <HBox prefHeight="100.0" prefWidth="200.0" style="-fx-alignment: center;">
+                  <HBox prefHeight="100.0" prefWidth="200.0" style="-fx-alignment: center;" VBox.vgrow="SOMETIMES">
                      <children>
-                        <Button fx:id="BtnAddItem" alignment="TOP_RIGHT" contentDisplay="RIGHT" mnemonicParsing="false" onMouseClicked="#onUpdateHandiworkDetail" styleClass="roundButton" stylesheets="@../css/styles.css" text="Modificar Item">
+                        <Button fx:id="BtnAddItem" alignment="TOP_RIGHT" contentDisplay="RIGHT" mnemonicParsing="false" onMouseClicked="#onUpdateHandiworkDetail" prefHeight="62.0" prefWidth="303.0" styleClass="saveButton" stylesheets="@../css/styles.css" text="Modificar Item">
                            <font>
                               <Font name="Roboto Medium" size="16.0" />
                            </font>
@@ -219,7 +219,7 @@
                               <Insets bottom="20.0" right="300.0" top="20.0" />
                            </HBox.margin>
                         </Button>
-                        <Button fx:id="BtnCancel" contentDisplay="RIGHT" mnemonicParsing="false" onMouseClicked="#closeDialog" prefHeight="71.0" prefWidth="174.0" styleClass="roundButton" stylesheets="@../css/styles.css" text="Cancelar">
+                        <Button fx:id="BtnCancel" contentDisplay="RIGHT" mnemonicParsing="false" onMouseClicked="#closeDialog" prefHeight="62.0" prefWidth="213.0" styleClass="cancelButton" stylesheets="@../css/styles.css" text="Cancelar">
                            <font>
                               <Font name="Roboto Medium" size="16.0" />
                            </font>
