--- a/OneDrive/Documentos/NetBeansProjectsP/TelasCompany/src/View/ModifyMeasurement.fxml
+++ b/OneDrive/Documentos/NetBeansProjectsP/TelasCompany/src/View/ModifyMeasurement.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="470.0" prefWidth="1148.0" style="-fx-alignment: center; -fx-background-color: white;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller_Pages.ModifyMeasurementController">
+<VBox prefHeight="470.0" prefWidth="981.0" style="-fx-alignment: center; -fx-background-color: white;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller_Pages.ModifyMeasurementController">
    <children>
       <VBox prefHeight="70.0" prefWidth="674.0" style="-fx-alignment: center;">
          <children>
@@ -27,17 +27,14 @@
             </Label>
          </children>
       </VBox>
-      <HBox prefHeight="75.0" prefWidth="1148.0" style="-fx-alignment: start;">
-         <padding>
-            <Insets left="20.0" />
-         </padding>
+      <HBox prefHeight="75.0" prefWidth="1148.0" style="-fx-alignment: start;" VBox.vgrow="SOMETIMES">
          <children>
-            <Label styleClass="labels" stylesheets="@../css/styles.css" text="Escoga la medida que será modificado">
+            <Label text="Escoga la medida que será modificado">
                <font>
                   <Font name="Roboto Medium" size="22.0" />
                </font>
                <HBox.margin>
-                  <Insets left="20.0" top="20.0" />
+                  <Insets left="200.0" top="20.0" />
                </HBox.margin>
             </Label>
             <ComboBox fx:id="ComboMeasurements" prefHeight="26.0" prefWidth="184.0" style="-fx-font-size: 15pt;">
@@ -47,32 +44,29 @@
             </ComboBox>
          </children>
       </HBox>
-      <HBox prefHeight="100.0" prefWidth="200.0" style="-fx-alignment: start;">
+      <HBox prefHeight="100.0" prefWidth="200.0" style="-fx-alignment: start;" VBox.vgrow="SOMETIMES">
          <children>
-            <Label fx:id="NameMeasurement" styleClass="labels" stylesheets="@../css/styles.css" text="Nombre de la Medida">
+            <Label fx:id="NameMeasurement" text="Nombre de la Medida">
                <font>
                   <Font name="Roboto Medium" size="22.0" />
                </font>
                <HBox.margin>
-                  <Insets left="20.0" top="20.0" />
+                  <Insets left="200.0" top="20.0" />
                </HBox.margin>
             </Label>
          </children>
          <VBox.margin>
             <Insets top="20.0" />
          </VBox.margin>
-         <padding>
-            <Insets left="20.0" />
-         </padding>
       </HBox>
-      <HBox prefHeight="100.0" prefWidth="200.0" style="-fx-alignment: start;">
+      <HBox prefHeight="100.0" prefWidth="200.0" style="-fx-alignment: start;" VBox.vgrow="SOMETIMES">
          <children>
-            <Label styleClass="labels" stylesheets="@../css/styles.css" text="Nuevo nombre de la medida">
+            <Label text="Nuevo nombre de la medida">
                <font>
                   <Font name="Roboto Medium" size="22.0" />
                </font>
                <HBox.margin>
-                  <Insets left="20.0" top="20.0" />
+                  <Insets left="200.0" top="20.0" />
                </HBox.margin>
             </Label>
             <TextField fx:id="TxtNewName" prefColumnCount="10">
@@ -92,18 +86,15 @@
                </HBox.margin>
             </Label>
          </children>
-         <padding>
-            <Insets left="20.0" />
-         </padding>
       </HBox>
       <HBox prefHeight="100.0" prefWidth="200.0" style="-fx-alignment: start;">
          <children>
-            <Button contentDisplay="RIGHT" mnemonicParsing="false" onMouseClicked="#UpdateMeasurement" styleClass="roundButton" stylesheets="@../css/styles.css" text="Modificar">
+            <Button contentDisplay="RIGHT" mnemonicParsing="false" onMouseClicked="#UpdateMeasurement" styleClass="modifyButton" stylesheets="@../css/styles.css" text="Modificar">
                <font>
                   <Font name="Roboto Medium" size="22.0" />
                </font>
                <HBox.margin>
-                  <Insets left="20.0" />
+                  <Insets left="200.0" />
                </HBox.margin>
                <graphic>
                   <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
@@ -113,7 +104,7 @@
                   </ImageView>
                </graphic>
             </Button>
-            <Button fx:id="BtnCancel" contentDisplay="RIGHT" mnemonicParsing="false" onMouseClicked="#closeDialog" styleClass="roundButton" stylesheets="@../css/styles.css" text="Cancelar">
+            <Button fx:id="BtnCancel" contentDisplay="RIGHT" mnemonicParsing="false" onMouseClicked="#closeDialog" styleClass="cancelButton" stylesheets="@../css/styles.css" text="Cancelar">
                <font>
                   <Font name="Roboto Medium" size="22.0" />
                </font>
